--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
      display: flex;
      justify-content: space-between;
  }
- .logo a {
+.navbar a {
     color: rgb(230, 230, 230);
     text-decoration: none;
     font-size: 1.8rem;
@@ -160,17 +160,13 @@ hr {
   font-size: 10px;
 }
 /* -------------------------------END FOOTER */
-/* --------------------------------FORM PAGE */
-label {
-  color: aliceblue;
-}
-/* --------------------------------END FORM PAGE */
+
 
  @media (max-width: 479px) {
   .nav-list {
     justify-content: space-around;
     width: 15.4rem;
-    margin: 20px 0px 0px ;
+    margin: 10px auto 0px;
   }
   .nav-list a {
     font-size: 1rem;
@@ -222,5 +218,33 @@ label {
    color: rgb(37, 37, 37);
  }
 /* ---------------------------------- END HOME */
+
+/* --------------------------------FORM PAGE */
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 18%;
+  background: rgb(49, 48, 46);
+}
+.container h4 {
+  color: rgb(233, 233, 233);
+  font-size: larger;
+  text-align: center;
+  margin-bottom: 30px;
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: 1.8px;
+}
+label {
+  color: rgb(233, 233, 233);
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+}
+input {
+  margin: 10px auto;
+  width: 100%;
+}
+/* --------------------------------END FORM PAGE */
 
  }
