changes on a form page

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body {
      background: rgb(17, 111, 219);
      display: flex;
      justify-content: space-between;
+     width: 100%;
  }
 .navbar a {
     color: rgb(230, 230, 230);
@@ -32,7 +33,6 @@ body {
      display: flex;
      justify-content: space-around;
      width: 15rem;
-     margin: 15px 0px 0px ;
  }
  .nav-list a {
      font-family: 'Poppins', sans-serif;
@@ -223,10 +223,10 @@ hr {
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   padding-top: 20px;
-  padding-bottom: 18%;
-  background: rgb(49, 48, 46);
+  margin-bottom: 12%;
+  margin-left: 10px;
 }
 .container h4 {
   color: rgb(233, 233, 233);
@@ -243,8 +243,38 @@ label {
 }
 input {
   margin: 10px auto;
+  width: 300px;
+}
+.btn {
+  display: flex;
+  justify-content: center;
+  background:rgb(17, 111, 219);
+  border: none;
+  color: aliceblue;
+  letter-spacing: 1px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: bold;
   width: 100%;
+  font-size: 1em;
+}
+.text {
+  color: rgb(207, 0, 0);
 }
 /* --------------------------------END FORM PAGE */
+
+/* --------------------------------greeting */
+.greeting {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 345px;
+  width: 100%;
+  font-family: 'Bree Serif', serif;
+  letter-spacing: 3px;
+  color: antiquewhite;
+  margin: auto;
+}
+/* --------------------------------End greeting */
 
  }
